@@ -71,6 +71,7 @@ Version 1.11.6+dev:
      "remove_from_carryover_on_leaders_loss" and "force_use_map_settings".
    * Allow numerical values for SideWML "controller" attribute.
    * Allow WML menu items to use hotkeys alongside/instead of the menu.
+   * Really added sighted events for ambushing units.
  * User interface:
    * Help Browser:
      * Units with variants are shown as sections with their childs as topics.
